--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+on
 {
   "name": "vite_react_shadcn_ts",
   "private": true,
@@ -35,7 +36,6 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -49,9 +49,13 @@
     "html2pdf.js": "^0.10.2",
     "input-otp": "^1.4.2",
     "jszip": "^3.10.1",
-    "lovable-tagger": "^1.1.13",
     "lucide-react": "^0.462.0",
+    "meilisearch": "^0.41.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
+    "pg": "^8.12.0",
+    "pocketbase": "^0.21.5",
+    "pusher-js": "^8.4.0-rc2",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -59,9 +63,11 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.61.1",
+    "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -73,6 +79,8 @@
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
+    "@types/nodemailer": "^6.4.19",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
