--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+on
 {
   "name": "vite_react_shadcn_ts",
   "private": true,
@@ -8,7 +9,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docker:dev": "docker-compose up -d && npm run dev",
+    "docker:down": "docker-compose down"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -41,6 +44,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.83.0",
+    "aws-sdk": "^2.1691.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -49,9 +53,13 @@
     "html2pdf.js": "^0.10.2",
     "input-otp": "^1.4.2",
     "jszip": "^3.10.1",
-    "lovable-tagger": "^1.1.13",
     "lucide-react": "^0.462.0",
+    "meilisearch": "^0.45.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
+    "pg": "^8.13.0",
+    "pocketbase": "^0.21.5",
+    "pusher-js": "^8.4.0-rc2",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -59,9 +67,11 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.61.1",
+    "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
+    "sharp": "^0.33.5",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -73,6 +83,8 @@
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
+    "@types/nodemailer": "^6.4.15",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
